<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">rallo_activity</string>
    <string name="hello_world">Hello world!</string>
    <string name="ActivityMainTitle">Activity Main Title !</string>
    <string name="action_settings">Settings</string>
    <string name="activity_a_title">ActivityA</string>
    <string name="activity_b_title">ActivityB</string>
    <string name="activity_c_title">ActivityC</string>
    <string name="go_to_Activity_A">Перейти в Activity A</string>
    <string name="go_to_Activity_B">Перейти в Activity B</string>
    <string name="go_to_Activity_C">Перейти в Activity C</string>
    <string name="textViewAactivityC">ActivityB</string>
    <string name="title_activity_activity_rallosa">ActivityRallosa</string>

</resources>
